Fixed image pathing in header after files were moved. (#271)
Also removed white background for the flag-SVG's because the background image on this page covers the header leading to the background of the SVG's being visible in this case, which is not wanted.

--- a/css/input.css
+++ b/css/input.css
@@ -77,7 +77,6 @@
   transition: opacity 0.5s, max-height 0.5s ease;
   position: absolute;
   left: 0;
-  background-color: white;
 }
 
 .group:hover #language-options {
